--- a/.github/actions/install-sim/action.yml
+++ b/.github/actions/install-sim/action.yml
@@ -31,6 +31,7 @@ runs:
         poetry run pip install -r test/work/firmware/requirements.txt
         poetry run pip install pysdl2-dll
         pip install -r test/work/firmware/requirements.txt
+        pip install pysdl2-dll
 
     - if: inputs.device == 'bitbox01'
       shell: bash
